--- a/app/views/reminders/index.html.erb
+++ b/app/views/reminders/index.html.erb
@@ -16,7 +16,7 @@
     <td><%= reminder.name %></td>
     <td><%= reminder.message %></td>
     <td><%= reminder.phonenumber %></td>
-    <td><%= reminder.appointment %></td>
+    <td><%= reminder.appointment %> UTC</td>
     <td><%= link_to 'Show', reminder %></td>
     <td><%= link_to 'Edit', edit_reminder_path(reminder) %></td>
     <td><%= link_to 'Destroy', reminder, :confirm => 'Are you sure?', :method => :delete %></td>
