added current time

--- a/app/views/reminders/_form.html.erb
+++ b/app/views/reminders/_form.html.erb
@@ -1,3 +1,5 @@
+<p>Current Time: <%=Time.now.utc%></p>
+
 <%= form_for(@reminder) do |f| %>
   <% if @reminder.errors.any? %>
     <div id="error_explanation">
