--- a/app/views/reminders/index.html.erb
+++ b/app/views/reminders/index.html.erb
@@ -1,6 +1,10 @@
 <h1>Listing Reminders</h1>
 <p>Current Time: <%=Time.now.utc%></p>
 
+<p>
+	This is a Tropo application designed to demonstrate building a reminder application using both Voice and SMS alerts.  The application will place an outbound reminder call to you 1 week in advance and then 1 day in advance and an SMS message 1 hour in advance of your appointment time.
+</p>
+
 <table>
   <tr>
     <th>Name</th>
